<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"


    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textColor="#ffff"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Konversi Suhu" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_suhu"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/pilihan" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="392dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Konversi"
                android:text="@string/konversi_suhu" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <TextView
                android:id="@+id/tvCelcius"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reamur"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/tvReamur"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:editable="false"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/tvFahrenheit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:editable="false"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelvin" />

            <TextView
                android:id="@+id/tvKelvin"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:editable="false"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ABOUT US"
                />
        </TableRow>
    </TableLayout>


</LinearLayout>